  slower
  (Alain Frisch)
  
- PR#6279, GPR#553: implement Set.map
  (Gabriel Scherer)

- GPR#473: Provide `Sys.backend_type` so that user can write backend-specific
  code in some cases (for example,  code generator).
  (Hongbo Zhang)

- PR#6820, GPR#560: Add Obj.reachable_words to compute the
  "transitive" heap size of a value
  (Alain Frisch, review by Marc Shinwell and Damien Doligez)

### Build system:

- GPR#324: Compiler developpers only: Adding new primitives to the
  standard runtime doesn't require anymore to run `make bootstrap`
  (François Bobot)

- GPR#384: Fix compilation using old Microsoft C Compilers not
  supporting secure CRT functions (SDK Visual Studio 2005 compiler and
  earlier) and standard 64-bit integer literals (Visual Studio .NET
  2002 and earlier)
  (David Allsopp)

- GPR#507: More sharing between Unix and Windows makefiles
  (whitequark, review by Alain Frisch)

### Bug fixes:

- PR#7112: Aliased arguments ignored for equality of module types

### Other libraries:

* GPR#533: Thread library: fixed [Thread.wait_signal] so that it
  converts back the signal number returned by [sigwait] to an
  OS-independent number
  (Jérémie Dimino)

### Documentation:

- PR#7243: warn users against using WinZip to unpack the source archive
  (Damien Doligez, report by Shayne Fletcher)

OCaml 4.03.0:
-------------

(Changes that can break existing programs are marked with a "*")

### Language features:

- PR#5528: inline records for constructor arguments
  (Alain Frisch)

- PR#6220, PR#6403, PR#6437, PR#6801:
  Improved redundancy and exhaustiveness checks for GADTs.
  Namely, the redundancy checker now checks whether the uncovered pattern
  of the pattern is actually inhabited, exploding at most one wild card.
  This is also done for exhaustiveness when there is only one case.
  Additionally, one can now write unreachable cases, of the form
  "pat -> .", which are treated by the redundancy check.
  (Jacques Garrigue)
